VclPtr: tdf#91396 crash after tool options and sidebar switching

Change-Id: I86c23ffc08c8dec275608d9bc0bbe5eaf7ce0993